tests/run-pass/conditionals.dino
fn main() {
    let x = false;
    let y = true;
    print_int(1);
    if x {
        print_int(2);
    } else if y {
        if true {
            print_int(3);
        }
        print_int(4);
    } else {
        print_int(5);
    }
    print_int(6);
}
