tests/compile-fail/parser/recovery.dino
fn main() {
    let x = false;
    // Missing semi colon
    let y = true
    // Missing bracket
    print_int(1;
    // Missing condition
    if {
        print_int(2);
    // Missing `if` in `else if`
    } else y {
        if true {
            print_int(3);
        }
        print_int(4);
    } else // Missing brace
        print_int(5);
    }
    print_int(6);
}
